dev_server.log

> ruta-verde@0.1.0 dev
> vite

Port 5173 is in use, trying another one...

  VITE v4.5.14  ready in 650 ms

  ➜  Local:   http://localhost:5174/
  ➜  Network: use --host to expose
1:58:28 AM [vite] page reload src/main.jsx
1:59:58 AM [vite] hmr update /src/components/Home.jsx, /src/index.css
1:59:58 AM [vite] hmr update /src/components/MapaReal.jsx, /src/index.css
1:59:58 AM [vite] page reload src/components/Mapa_old.jsx
1:59:58 AM [vite] hmr update /src/components/Perfil.jsx, /src/index.css
1:59:58 AM [vite] hmr update /src/components/Puntos.jsx, /src/index.css
1:59:58 AM [vite] hmr update /src/components/Rutas.jsx, /src/index.css
1:59:58 AM [vite] hmr update /src/components/Onboarding.jsx, /src/index.css
1:59:58 AM [vite] hmr update /src/App.jsx, /src/index.css
3:35:54 AM [vite] hmr update /src/RutaVerde.jsx, /src/index.css
4:27:53 AM [vite] hmr update /src/RutaVerde.jsx, /src/index.css
4:32:44 AM [vite] hmr update /src/RutaVerde.jsx, /src/index.css
4:37:25 AM [vite] hmr update /src/RutaVerde.jsx, /src/index.css
4:38:41 AM [vite] hmr update /src/RutaVerde.jsx, /src/index.css
4:56:51 AM [vite] hmr update /src/RutaVerde.jsx, /src/index.css
4:57:43 AM [vite] hmr update /src/index.css
4:57:43 AM [vite] page reload src/main.jsx
4:57:43 AM [vite] hmr update /src/RutaVerde.jsx, /src/index.css
4:57:43 AM [vite] page reload index.html
4:57:43 AM [vite] page reload tailwind.config.js
4:57:44 AM [vite] vite.config.js changed, restarting server...
Port 5173 is in use, trying another one...
(!) Could not auto-determine entry point from rollupOptions or html files and there are no explicit optimizeDeps.include patterns. Skipping dependency pre-bundling.
Port 5174 is in use, trying another one...
Port 5175 is in use, trying another one...
4:57:46 AM [vite] server restarted.

  ➜  Local:   http://localhost:5176/
  ➜  Network: use --host to expose
node:internal/process/promises:394
    triggerUncaughtException(err, true /* fromPromise */);
    ^

[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: /app/ruta-verde): [Error] Loading PostCSS Plugin failed: Cannot find module 'tailwindcss'
Require stack:
- /app/postcss.config.js

(@/app/postcss.config.js)
Error: Loading PostCSS Plugin failed: Cannot find module 'tailwindcss'
Require stack:
- /app/postcss.config.js

(@/app/postcss.config.js)
    at load (file:///app/ruta-verde/node_modules/vite/dist/node/chunks/dep-827b23df.js:36430:11)
    at file:///app/ruta-verde/node_modules/vite/dist/node/chunks/dep-827b23df.js:36455:16
    at Array.map (<anonymous>)
    at plugins (file:///app/ruta-verde/node_modules/vite/dist/node/chunks/dep-827b23df.js:36454:8)
    at processResult (file:///app/ruta-verde/node_modules/vite/dist/node/chunks/dep-827b23df.js:36524:14)
    at file:///app/ruta-verde/node_modules/vite/dist/node/chunks/dep-827b23df.js:36648:14]

Node.js v22.22.0
st/node/chunks/dep-827b23df.js:36430:11)
    at file:///app/ruta-verde/node_modules/vite/dist/node/chunks/dep-827b23df.js:36455:16
    at Array.map (<anonymous>)
    at plugins (file:///app/ruta-verde/node_modules/vite/dist/node/chunks/dep-827b23df.js:36454:8)
    at processResult (file:///app/ruta-verde/node_modules/vite/dist/node/chunks/dep-827b23df.js:36524:14)
    at file:///app/ruta-verde/node_modules/vite/dist/node/chunks/dep-827b23df.js:36648:14]

Node.js v22.22.0
